Commits uncommited code.
